bpo-34100: compile: Merge constants